--- a/src/components/PokemonsList/PokemonList.css
+++ b/src/components/PokemonsList/PokemonList.css
@@ -74,8 +74,8 @@
 }
 
 .pokedex__item--type-img {
-	width: 20px;
-	height: 20px;
+	width: 1.3rem;
+	height: 1.3rem;
 }
 
 .pokemon__panel {
@@ -133,15 +133,10 @@
 	.pokedex {
 		width: unset;
 		font-size: 0.6rem;
-		--col-size: 30px;
+		--col-size: 25px;
 	}
 
 	.pokedex__item-count-input {
 		height: 34px;
 	}
-
-	.pokedex__item--type-img {
-		width: 15px;
-		height: 15px;
-	}	
 }
